objects/SLX__Change_Control__c.object
<CustomObject>
    <description>Administrative Object to allow the tracking and approval of system changes</description>
    <fields>
        <fullName>Apex_Planning__c</fullName>
        <description>This is a place where the developer can insert code planning to communicate the ideas of a new trigger, class, VF page or other</description>
        <label>Apex Planning</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Issue_Request_Details__c</fullName>
        <inlineHelpText>enter the details of the change or issue you are requesting/having</inlineHelpText>
        <label>Change/Issue Request Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Issue_Request__c</fullName>
        <defaultValue>&quot;enter your request or issue here&quot;</defaultValue>
        <inlineHelpText>**Enter your request in the field below**</inlineHelpText>
        <label>Change/Issue Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Feature/Functionality Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer-Facing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General User Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Experience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_Notify__c</fullName>
        <inlineHelpText>ONLY select this to show the type of work you have COMPLETED; it will send the appropriate email notifications.</inlineHelpText>
        <label>Completed Changes Notification</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field/Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Button or Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX Classes/Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Notify Maggie/Mark</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Involvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department3__c</fullName>
        <description>The department of the Requestor.</description>
        <formula>SLX__Requestor__r.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Release_Date__c</fullName>
        <inlineHelpText>Only used on Roadmapped items.</inlineHelpText>
        <label>Projected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <formula>(First_Response__c - CreatedDate)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <inlineHelpText>updated by workflow when the first response comment is created</inlineHelpText>
        <label>First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Force_to_Top__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Adds 9001 to the value.</inlineHelpText>
        <label>Force to Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>CASE( SLX__Request_Status__c , 
&quot;Completed&quot;, &quot;True&quot;, 
&quot;Denied&quot;, &quot;True&quot;, 
&quot;Cancelled&quot;, &quot;True&quot;,
&quot;Duplicate&quot;,&quot;True&quot;,
&quot;Converted&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsClosed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <inlineHelpText>please paste the url link to the record you are having an issue with. If this request/issue is not related to a Salesforce record, simply type in N/A</inlineHelpText>
        <label>Link to Record</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Moving_Forward_Notes__c</fullName>
        <label>Moving Forward Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_Forward__c</fullName>
        <label>Moving Forward</label>
        <picklist>
            <picklistValues>
                <fullName>Complete It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postpone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Needs_Apex__c</fullName>
        <label>Needs Apex</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Dashboard__c</fullName>
        <label>New Dashboard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Email_Template__c</fullName>
        <label>New Email Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Report__c</fullName>
        <inlineHelpText>new report created</inlineHelpText>
        <label>New Report</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Workflow__c</fullName>
        <inlineHelpText>new workflow implemented</inlineHelpText>
        <label>New Workflow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <description>This is the next step in the implementation of a change</description>
        <inlineHelpText>This is the next step in the implementation of a change</inlineHelpText>
        <label>Next Step</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PANs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>(SLX__Days_Outstanding__c +1 ) * 0.25 *
CASE( SLX__Request_Status__c , &quot;Completed&quot;, 0, &quot;Denied&quot;, 0, &quot;On Hold&quot;, 0, &quot;Cancelled&quot;, 0, &quot;Future&quot;, 0.1,1) *
CASE( Priority__c , &quot;5-Cold&quot;, 1, &quot;4-Lukewarm&quot;, 2, &quot;3-Warm&quot;, 4, &quot;2-Hot&quot;, 8, &quot;1-ON FIRE&quot;, 16, 1) *
CASE( Time_to_Completion__c , &quot;Quick Fix&quot;, 5, &quot;Half Day&quot;, 2, &quot;1 Day&quot;, 1, &quot;2 Days+&quot;, 0.5, 1) *
CASE( Change_Type__c, &quot;Customer-Facing Issue&quot;, 4, &quot;Broken Functionality&quot;, 3, 1) * 
CASE( Department3__c , 
&quot;Executive Team&quot;, 4, 
&quot;Sales&quot;, 3,
&quot;Creative&quot;, 2,
&quot;Fulfillment&quot;, 2,
&quot;Human Resources&quot;, 2,
&quot;Implementation&quot;, 1.5,
&quot;Integration&quot;, 2,
&quot;Process Marketing&quot;, 2,
&quot;VinCare&quot;, 3,
&quot;VinPros&quot;, 3,
&quot;Training&quot;, 2,
&quot;Virtual Training&quot;, 2,
&quot;Website Support&quot;, 1.5,
1) +
IF( Force_to_Top__c = TRUE, 9001, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>used to be the placeholder for a meeting that generates multiple change reqeusts</inlineHelpText>
        <label>Parent Change</label>
        <referenceTo>SLX__Change_Control__c</referenceTo>
        <relationshipLabel>Changes</relationshipLabel>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>5-Cold</fullName>
                <color>#33CCFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>4-Lukewarm</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>3-Warm</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>2-Hot</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>1-ON FIRE</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Start_Date__c</fullName>
        <inlineHelpText>Used on Roadmapped items only.</inlineHelpText>
        <label>Projected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Year__c</fullName>
        <inlineHelpText>How much money does this change save the company per year</inlineHelpText>
        <label>ROI / Year</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ready_for_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Release Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports_To_Email__c</fullName>
        <formula>SLX__Requestor__r.Manager_Email_Address__c</formula>
        <label>Reports To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_s_Email__c</fullName>
        <formula>SLX__Requestor__r.Email</formula>
        <label>Requestor&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roadmapped_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roadmapped Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLX__Date_Completed__c</fullName>
        <description>Date work was actually completed</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX__Date_Requested__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date work is to be completed by</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX__Days_Outstanding__c</fullName>
        <formula>IF( ISPICKVAL( SLX__Request_Status__c , &quot;Completed&quot;) ,  SLX__Date_Completed__c - SLX__Date_Requested__c , TODAY() -  SLX__Date_Requested__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days: Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX__Days_Processed__c</fullName>
        <formula>SLX__Date_Completed__c -  SLX__Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days: Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX__Description__c</fullName>
        <inlineHelpText>Enter detailed notes about the change requested</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLX__Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLX__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter your name</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001Hw99EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLX__Results__c</fullName>
        <label>Issues/Results/Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Steps_Prior_to_Release__c</fullName>
        <label>Steps Prior to Release</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_to_Completion__c</fullName>
        <label>Time to Completion</label>
        <picklist>
            <picklistValues>
                <fullName>Quick Fix</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Half Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <description>Rolls up from Time Spent field on Change Comment.</description>
        <label>Total Time Spent</label>
        <summarizedField>Change_Comment__c.Time_Spent__c</summarizedField>
        <summaryForeignKey>Change_Comment__c.Change_Control__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Functionality Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Created__c</fullName>
        <inlineHelpText>enter the new view created</inlineHelpText>
        <label>New View</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_request__c</fullName>
        <defaultValue>&quot;Enter your request directly below in the CHANGE CONTROL REQUEST field&quot;</defaultValue>
        <inlineHelpText>***Enter your request in the field below***</inlineHelpText>
        <label>What is your request?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Change Control</label>
    <listViews>
        <fullName>ALL_Not_Completed_Created_2012</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>Object__c</columns>
        <columns>Department3__c</columns>
        <columns>SLX__Description__c</columns>
        <columns>SLX__Date_Completed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>ALL-Not Completed-Created 2012</label>
    </listViews>
    <listViews>
        <fullName>ALL_Outstanding</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>Change_Type__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,On Hold,Future,Cancelled,Duplicate,Converted</value>
        </filters>
        <label>ALL Outstanding</label>
    </listViews>
    <listViews>
        <fullName>ALL_Outstanding_Created_2012</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>Change_Type__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,On Hold,Future,Cancelled,Duplicate</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>ALL Outstanding-Created 2012</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>Object__c</columns>
        <columns>SLX__Description__c</columns>
        <columns>SLX__Date_Completed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,Cancelled,Duplicate,Converted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>ALL-Not Completed-Created this year</label>
    </listViews>
    <listViews>
        <fullName>AllOutstanding</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>Change_Type__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Duplicate,Cancelled,Completed,Future</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>ALL Outstanding-Created the last 90 days</label>
    </listViews>
    <listViews>
        <fullName>All_in_NEW_Status</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>All in NEW Status</label>
    </listViews>
    <listViews>
        <fullName>Celeste_Change_Requests</fullName>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Priority__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Celeste</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,Cancelled,Future,Duplicate,Converted</value>
        </filters>
        <label>**Celeste Change Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProcessDevelopmentManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Jennifer_Merrick</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>SLX__Requestor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Requestor__c</field>
            <operation>equals</operation>
            <value>Jennifer Merrick</value>
        </filters>
        <label>Change Requests-Jennifer Merrick</label>
    </listViews>
    <listViews>
        <fullName>Changes_logged_by_Keen</fullName>
        <columns>NAME</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department3__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,On Hold,Cancelled,Duplicate,Converted</value>
        </filters>
        <label>Open Changes for Keen</label>
    </listViews>
    <listViews>
        <fullName>Changes_logged_by_Shelli</fullName>
        <columns>NAME</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Requestor__c</field>
            <operation>equals</operation>
            <value>Shelli Clark</value>
        </filters>
        <label>Changes logged by Shelli</label>
    </listViews>
    <listViews>
        <fullName>Changes_logged_by_Sherry</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department3__c</field>
            <operation>equals</operation>
            <value>implementation,integration</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,Denied,On Hold,Future,Duplicate,Converted</value>
        </filters>
        <label>Open Changes for Sherry</label>
    </listViews>
    <listViews>
        <fullName>Changes_logged_shelli</fullName>
        <columns>Priority__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department3__c</field>
            <operation>equals</operation>
            <value>training,virtual training</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,Denied,On Hold,Converted</value>
        </filters>
        <label>Open Changes for Shelli</label>
    </listViews>
    <listViews>
        <fullName>CompletedThisMonth</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>Department3__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>SLX__Date_Completed__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Time_to_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Date_Completed__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed This Year</label>
    </listViews>
    <listViews>
        <fullName>CompletedThisWeek</fullName>
        <columns>NAME</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SLX__Date_Completed__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Roadmapped_Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Date_Completed__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Completed Today</label>
    </listViews>
    <listViews>
        <fullName>Dashboards_and_Reports</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Order__c</columns>
        <columns>Object__c</columns>
        <columns>SLX__Requestor__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>SLX__Date_Requested__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Dashboards,Reports</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>SF Changes Queue,kjoli</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,Future,On Hold,Cancelled,Duplicate</value>
        </filters>
        <label>Dashboards and Reports</label>
        <sharedTo>
            <group>SalesforceAdmin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Change Control Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <recordTypes>
        <fullName>SLX__Admin</fullName>
        <active>true</active>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLX__User</fullName>
        <active>true</active>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>